--- a/src/main/resources/Astrologer/localization/zhs/RelicStrings.json
+++ b/src/main/resources/Astrologer/localization/zhs/RelicStrings.json
@@ -6,6 +6,13 @@
       "将每回合打出的第一张牌放到抽牌堆的底部."
     ]
   },
+  "astrologer:Lemegeton": {
+    "NAME": "所罗门的钥匙",
+    "FLAVOR": "所罗门的钥匙",
+    "DESCRIPTIONS": [
+      "每抽出一张牌, 用随机牌替换被抽到的牌. 费用不变."
+    ]
+  },
   "astrologer:SkyMirrorUpg": {
     "NAME": "万能镜",
     "FLAVOR": "它反映一切; ",
@@ -17,7 +24,7 @@
     "NAME": "望远镜",
     "FLAVOR": "镜头有裂痕, 但它仍然有纪念意义.",
     "DESCRIPTIONS": [
-      "每场战斗开始时, astrologer:星相 增加 #b4 层."
+      "每场战斗开始时, #y星相 增加 #b4 层."
     ]
   },
   "astrologer:Zodiac": {
@@ -31,13 +38,13 @@
       "双子座",
       "巨蟹座",
       "狮子座",
-      " astrologer:太阳 的效应总是活跃的.",
+      " #y太阳 的效应总是活跃的.",
       "处女座",
       "天秤座",
       "天蝎座",
       "射手座",
       "摩羯座",
-      " astrologer:月亮 的效应总是活跃的."
+      " #y月亮 的效应总是活跃的."
     ]
   }
 }
