--- a/src/main/resources/Astrologer/localization/jpn/RelicStrings.json
+++ b/src/main/resources/Astrologer/localization/jpn/RelicStrings.json
@@ -3,7 +3,7 @@
     "NAME": "天空の鏡",
     "FLAVOR": "人の見られる空は限られている。 この鏡を見るといい、その代わりだ。",
     "DESCRIPTIONS": [
-      "ターンの最初にプレイしたカードを山札の一番下に置く。"
+      "ターンの最初にプレイしたカードを山札の底に置く。"
     ]
   },
   "astrologer:Lemegeton": {
