--- a/src/main/resources/Astrologer/localization/zhs/Keywords.json
+++ b/src/main/resources/Astrologer/localization/zhs/Keywords.json
@@ -5,7 +5,7 @@
       "星球",
       "星球"
     ],
-    "DESCRIPTION": "当这张牌打出或者 #y消耗 , 增加 #y星相 并 改变 #y星相排序 ."
+    "DESCRIPTION": "当这张牌打出或者 #y消耗 ，增加 #y星相 并改变 #y星相排序 。"
   },
   {
     "PROPER_NAME": "星相",
@@ -13,7 +13,7 @@
       "星相",
       "星相"
     ],
-    "DESCRIPTION": " #y星相 从 #b1 开始, 并且每当 #y星球 牌被打出或者 #y消耗 时增加."
+    "DESCRIPTION": " #y星相 从 #b1 开始，每当 #y星球 牌被打出或者 #y消耗 时 #y星相 会增加。"
   },
   {
     "PROPER_NAME": "星相排序",
@@ -23,21 +23,21 @@
       "月亮",
       "月亮:"
     ],
-    "DESCRIPTION": " #y星相排序 可以是 #y太阳 的也可以是 #y月球 的. NL 每当 #y星球 牌被打出或者 #y消耗 时 #y星相排序 将会切换."
+    "DESCRIPTION": " #y星相排序 可以是 #y太阳 也可以是 #y月亮 。 NL 每当 #y星球 牌被打出或者 #y消耗 时 #y星相排序 将会切换。"
   },
   {
     "PROPER_NAME": "星芒",
     "NAMES": [
       "星芒"
     ],
-    "DESCRIPTION": "身上有 #y星芒 的敌人, 每回合失去相当于 #y星相 层数的生命值. 每回合, #y星芒 降低 #b1 层."
+    "DESCRIPTION": "身上有 #y星芒 的敌人，每回合失去相当于 #y星相 层数的生命值。每回合， #y星芒 降低 #b1 层。"
   },
   {
-    "PROPER_NAME": "Ominous Star",
+    "PROPER_NAME": "预兆之星",
     "NAMES": [
-      "ominous star",
-      "ominous_star"
+      "预兆之星",
+      "预兆之星"
     ],
-    "DESCRIPTION": "#yOminous #yStar is a 1 cost #y星球 ."
+    "DESCRIPTION": "#y预兆之星 是一种1耗能的 #y星球 。"
   }
 ]
