--- a/src/main/resources/Astrologer/localization/zhs/PowerStrings.json
+++ b/src/main/resources/Astrologer/localization/zhs/PowerStrings.json
@@ -2,134 +2,134 @@
   "astrologer:Starlit": {
     "NAME": "星芒",
     "DESCRIPTIONS": [
-      "在你的回合开始时, 失去相当于 #y星相 数量的生命值, 然后 #y星芒 降低 #b1 层.",
-      "在你的回合开始时, 失去相当于 #y星相 数量的生命值, 然后 #y星芒 降低 #b1 层."
+      "在你的回合开始时，失去相当于 #y星相 数量的生命值，然后 #y星芒 降低 #b1 层。",
+      "在你的回合开始时，失去相当于 #y星相 数量的生命值，然后 #y星芒 降低 #b1 层。"
     ]
   },
   "astrologer:Starfield": {
     "NAME": "星体形态",
     "DESCRIPTIONS": [
-      "所有的牌都有 #y星球 效果."
+      "所有的牌都有 #y星球 效果。"
     ]
   },
   "astrologer:DarkMatter": {
     "NAME": "暗物质",
     "DESCRIPTIONS": [
-      "每回合第一张 #y消耗 的牌, #y状态 牌或者 #y诅咒 牌除外, 在抽牌堆放入一张此牌的复制品.",
-      "每回合第一张",
-      "  #y消耗 的牌 , #y状态 牌或者 #y诅咒 牌除外, 在抽牌堆放入一张此牌的复制品."
+      "每回合首张非状态或非诅咒牌被消耗时，在抽牌堆放入一张该牌的复制品。",
+      "每回合首张",
+      "非状态或非诅咒牌被消耗时，在抽牌堆放入一张该牌的复制品。"
     ]
   },
   "astrologer:FrozenStar": {
     "NAME": "冻星",
     "DESCRIPTIONS": [
       "下次打出 #y星球 牌时, 获得 #b",
-      " #y格挡 ."
+      " #y格挡 。"
     ]
   },
   "astrologer:CrystalBall": {
     "NAME": "水晶球",
     "DESCRIPTIONS": [
-      "在你的回合开始时, 如果敌人 ",
+      "在你的回合开始时，如果敌人 ",
       " 失去 #b",
-      " 生命值.",
-      "意图 #y攻击,",
-      "意图进行 #y强化 并 #y攻击 ,",
-      "意图对你施加 #y负面效果 并 #y攻击 ,",
-      "意图 #y格挡 并 #y攻击 ,",
-      "意图进行 #y强化,",
-      "意图对你造成 #y负面效果 ,",
-      "意图对你施加一种强大的 #y负面效果 ,",
+      " 生命值。",
+      "意图 #y攻击 ，",
+      "意图进行 #y强化 并 #y攻击 ，",
+      "意图对你施加 #y负面效果 并 #y攻击 ，",
+      "意图 #y格挡 并 #y攻击 ，",
+      "意图进行 #y强化 ，",
+      "意图对你造成 #y负面效果 ，",
+      "意图对你施加一种强大的 #y负面效果 ，",
       "意图 #yDebug, 你在打什么...",
-      "意图进行 #y格挡,",
-      "意图进行 #y格挡 并对你施加一种 #y负面效果 ,",
-      "意图进行 #y格挡 并进行 #y强化 ,",
-      "意图 #y逃跑,",
-      "意图使用 #y魔法 ,",
-      "意图什么都不做,",
-      "正在睡觉,",
-      "被 #y击晕 了,",
-      "意图 #y不明,"
+      "意图进行 #y格挡 ，",
+      "意图进行 #y格挡 并对你施加一种 #y负面效果 ，",
+      "意图进行 #y格挡 并进行 #y强化 ，",
+      "意图 #y逃跑 ，",
+      "意图使用 #y魔法 ，",
+      "意图什么都不做 ，",
+      "正在睡觉 ，",
+      "被 #y击晕 了，",
+      "意图 #y不明，"
     ]
   },
   "astrologer:GlassStar": {
     "NAME": "玻璃之星",
     "DESCRIPTIONS": [
       " #y消耗 打出的下一张牌 并获得相当于 #b",
-      " 倍耗能的 #y格挡 ."
+      " 倍耗能的 #y格挡 。"
     ]
   },
   "astrologer:Still": {
     "NAME": "静止",
     "DESCRIPTIONS": [
       " astrologer:星相 #b",
-      " 回合不能改变.",
-      " 回合不能改变."
+      " 回合不能改变。",
+      " 回合不能改变。"
     ]
   },
   "astrologer:Premonition": {
     "NAME": "预感",
     "DESCRIPTIONS": [
-      "每当你抽到一张 #y虚无 牌, 抽 #b",
-      " 张牌.",
-      " 张牌."
+      "每当你抽到一张 #y虚无 牌，抽 #b",
+      " 张牌。",
+      " 张牌。"
     ]
   },
   "astrologer:Confirmation": {
-    "NAME": "确认",
+    "NAME": "证实",
     "DESCRIPTIONS": [
-      "Whenever you draw an #yOminous #yStar, 对所有敌人造成 #b",
-      " 点伤害."
+      "每抽到一张 #y预兆之星 ，对所有敌人造成 #b",
+      " 点伤害。"
     ]
   },
   "astrologer:Glimpse": {
-    "NAME": "瞥一眼",
+    "NAME": "一瞥",
     "DESCRIPTIONS": [
-      "每当你抽到一张 #y虚无 牌, 获得 #b",
-      " #y格挡 ."
+      "每当你抽到一张 #y虚无 牌，获得 #b",
+      " #y格挡 。"
     ]
   },
   "astrologer:Nova": {
     "NAME": "新星",
     "DESCRIPTIONS": [
       "在你的回合结束时 #y星芒 触发 #b",
-      " 次.",
-      " 次."
+      " 次。",
+      " 次。"
     ]
   },
   "astrologer:Hanged": {
     "NAME": "绞刑",
     "DESCRIPTIONS": [
-      "这回合,你每抽一张牌, 失去 #b",
-      " 生命值."
+      "这回合，你每抽一张牌，失去 #b",
+      " 生命值。"
     ]
   },
   "astrologer:Prismatic": {
     "NAME": "棱镜",
     "DESCRIPTIONS": [
-      "每回合第一次打出 #y星球 , 随机给予敌人 #b",
-      " 层 #y星芒 ."
+      "每回合第一次打出 #y星球 ，随机给予敌人 #b",
+      " 层 #y星芒 。"
     ]
   },
   "astrologer:CosmicExpanse": {
     "NAME": "宇宙膨胀",
     "DESCRIPTIONS": [
       "你每打出一张 #y星球 牌, 将 #y星相 增加 #b",
-      "."
+      "。"
     ]
   },
   "astrologer:LoversA": {
     "NAME": "恋人",
     "DESCRIPTIONS": [
       "下一次触发 ",
-      ", 触发两次."
+      ", 触发两次。"
     ]
   },
   "astrologer:LoversB": {
     "NAME": "恋人",
     "DESCRIPTIONS": [
       "下一次触发 ",
-      ", 触发两次."
+      ", 触发两次。"
     ]
   },
   "astrologer:Prestidigitation": {
@@ -145,17 +145,17 @@
   "astrologer:Fate": {
     "NAME": "命运",
     "DESCRIPTIONS": [
-      "在这个回合，你打出的下 1 张 #y恒星 牌将被激活.",
-      "在这个回合，你打出的下 #b",
-      " 张 #y恒星 牌将被激活."
+      "此回合中，你打出的下 1 张 #y恒星 牌将被激活。",
+      "此回合中，你打出的下 #b",
+      " 张 #y恒星 牌将被激活。"
     ]
   },
   "astrologer:Trine": {
     "NAME": "三分相",
     "DESCRIPTIONS": [
-      "在这个回合，你打出的下 1 张牌会打出两次.",
-      "在这个回合，你打出的下 #b",
-      " 张牌会打出两次."
+      "此回合中，你打出的下 1 张牌会打出两次。",
+      "此回合中，你打出的下 #b",
+      " 张牌会打出两次。"
     ]
   }
 }
